# microkorgxl_controller

./: .gitignore  CMakeLists.txt  microKORG_XL_MIDIimp.txt
CMake/: Findjack.cmake
src/: app.cpp  app.hpp  dummy_midi_interface.cpp  dummy_midi_interface.hpp  jack_midi_interface.cpp  jack_midi_interface.hpp  main.cpp  midi_interface.cpp  midi_interface.hpp  program.cpp  program.hpp  settings.cpp  settings.hpp
src/gui/: gui_params.cpp  gui_params.hpp
tests/: gui_tests.cpp  gui_tests.hpp
